--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -28,6 +28,9 @@ jobs:
     #   - https://gh.io/using-larger-runners (GitHub.com only)
     # Consider using larger runners or machines with greater resources for possible analysis time improvements.
     runs-on: windows-latest
+    env:
+      GOOS: windows
+      GOARCH: amd64
     permissions:
       # required for all workflows
       security-events: write
