--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,6 +8,10 @@ on:
         required: true
         default: "X.X.X"
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   build:
     runs-on: windows-latest
@@ -46,6 +50,9 @@ jobs:
   tag-and-release:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -53,7 +60,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Download artifact from build
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v4.3.0
         with:
           name: release-zip
 
@@ -77,7 +84,7 @@ jobs:
           custom_tag: ${{ github.event.inputs.version }}
 
       - name: Create a GitHub release
-        uses: ncipollo/release-action@v1
+        uses: ncipollo/release-action@v1.18.0
         with:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: EDxDC ${{ steps.tag_version.outputs.new_tag }}
