--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -62,5 +62,6 @@ jobs:
           files: |
             ./installer/EDxDC-v${{ env.VERSION }}-beta-Setup.exe
             ./EDxDC-v${{ env.VERSION }}-portable-amd64.zip
+          tag_name: ${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
