chore(build): changed syntax to pwsh

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,9 +22,10 @@ jobs:
       - name: Extract version from latest tag
         id: get_version
         run: |
-          LATEST_TAG=$(git describe --tags --abbrev=0)
-          echo "VERSION=${LATEST_TAG#v}" >> $GITHUB_ENV
-          echo "TAG_NAME=${LATEST_TAG}" >> $GITHUB_ENV
+          $latestTag = git describe --tags --abbrev=0
+          $version = $latestTag -replace '^v', ''
+          echo "VERSION=$version" >> $env:GITHUB_ENV
+          echo "TAG_NAME=$latestTag" >> $env:GITHUB_ENV
 
       - name: Set up Go
         uses: actions/setup-go@v4
