--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@
 # Ignore all PowerShell scripts from language stats
 *.ps1 linguist-vendored
 *.iss linguist-vendored
+*.html linguist-vendored
 
 # Standard to msysgit
 *.doc	 diff=astextplain
